맛집 게임 추가

--- a/chung/WebContent/header.html
+++ b/chung/WebContent/header.html
@@ -42,8 +42,8 @@ function pageMv(page){
 <ul>
   <li><a href="#" onclick = "pageMv('index.html');return false;">홈</a></li>
   <li><a href="#" onclick = "pageMv('introduction.html');return false;">소개서</a></li>
-  <li><a href="#" onclick = "pageMv('index.html');return false;">맛집</a></li>
-  <li><a href="#" onclick = "pageMv('index.html');return false;">게임</a></li>
+  <li><a href="#" onclick = "pageMv('restaurant.html');return false;">맛집</a></li>
+  <li><a href="#" onclick = "pageMv('game.html');return false;">게임</a></li>
 </ul>
 </body>
 </html>
