--- a/chung/WebContent/introduction.html
+++ b/chung/WebContent/introduction.html
@@ -56,7 +56,7 @@
 </head>
 <body>
 <div id="header"></div>
-<div id = "pdfDownload" onClick = "pdfDownload()">다운로드</div>
+<button id = "pdfDownload" type = "button" onClick = "pdfDownload()" style = "background-color:red; font-weight: bold">PDF 다운로드</button>
 <div id = "pdfDiv" style = "background-color:white">
 <div style ="font-weight: bold;	font-size:50px;	text-align:center; color : #FF6813"> 정현진의 소개서</div>
 <p class = "divTitle">기본정보</p>
